[gd_scene load_steps=15 format=2]

[ext_resource path="res://engine/stats/Show_FPS.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/UI_Action_Button/Action_Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/UI_QuestMenu/QuestJournal.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/UI.gd" type="Script" id=4]
[ext_resource path="res://ui/M.png" type="Texture" id=5]
[ext_resource path="res://ui/Interfaces/Debug_Interace/BacktoMainMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/reusableWindows/AvatarEditable.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/Interfaces/profileMenu/ProfileMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/icons/icons/pausa regular.png" type="Texture" id=9]
[ext_resource path="res://assets/icons/icons/pausa irregular.png" type="Texture" id=10]
[ext_resource path="res://assets/icons/moneda.png" type="Texture" id=11]

[sub_resource type="Animation" id=1]
resource_name = "slideInProfile"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Control/ProfileMenu:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1920, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/ProfileMenu/Background:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.0784314 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Control/QuestMenu:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 355, 1380 ), Vector2( 355, 178 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Control/QuestMenu:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 355, 178 ), Vector2( 355, 1380 ) ]
}

[node name="UI" type="CanvasLayer" groups=[
"global_user_interface",
]]
script = ExtResource( 4 )

[node name="Show_FPS" parent="." instance=ExtResource( 1 )]
layer = 1

[node name="Control" type="Control" parent="." groups=[
"general_user_interface",
]]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PerfilMenu" parent="Control" instance=ExtResource( 7 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -260.0
margin_top = 60.0
margin_right = -100.0
margin_bottom = 220.0

[node name="QuestButton" type="TextureButton" parent="Control"]
anchor_left = 0.908
anchor_top = 0.141
anchor_right = 0.908
anchor_bottom = 0.141
margin_left = -93.36
margin_top = 67.72
margin_right = -43.36
margin_bottom = 117.72
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="TextureButton" parent="Control"]
anchor_left = 0.908
anchor_top = 0.141
anchor_right = 0.908
anchor_bottom = 0.141
margin_left = 82.5533
margin_top = -133.506
margin_right = 152.553
margin_bottom = -63.506
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Action_Button" parent="Control" instance=ExtResource( 2 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -158.0
margin_top = -158.0
margin_right = -29.9999
margin_bottom = -30.0
mouse_filter = 1
expand = true

[node name="QuestMenu" parent="Control" instance=ExtResource( 3 )]
anchor_left = 0.518
anchor_right = 0.518
margin_left = -639.56
margin_top = 840.0
margin_right = 640.44
margin_bottom = 1472.0

[node name="BacktoMainMenu" parent="Control" instance=ExtResource( 6 )]
visible = false
margin_left = 20.0
margin_top = 301.0
margin_right = 144.0
margin_bottom = 348.0

[node name="ProfileMenu" parent="Control" instance=ExtResource( 8 )]
visible = false
margin_left = 1920.0
margin_right = 1920.0

[node name="Background" parent="Control/ProfileMenu" index="0"]
color = Color( 0, 0, 0, 0 )

[node name="MonedasObtenidas" type="HBoxContainer" parent="Control"]
visible = false
margin_left = 1121.09
margin_top = 58.9297
margin_right = 1575.09
margin_bottom = 209.93
__meta__ = {
"_edit_use_anchors_": false
}

[node name="moneda" type="Sprite" parent="Control/MonedasObtenidas"]
texture = ExtResource( 11 )
centered = false

[node name="moneda2" type="Sprite" parent="Control/MonedasObtenidas"]
position = Vector2( 155, 0 )
texture = ExtResource( 11 )
centered = false

[node name="moneda3" type="Sprite" parent="Control/MonedasObtenidas"]
position = Vector2( 310, 0 )
texture = ExtResource( 11 )
centered = false

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/slideInProfile = SubResource( 1 )
anims/slide_in_quest_journal = SubResource( 2 )
anims/slide_out_quest_journal = SubResource( 3 )
[connection signal="pressed" from="Control/PerfilMenu" to="." method="_on_PerfilMenu_pressed"]
[connection signal="pressed" from="Control/QuestButton" to="." method="_on_QuestButton_pressed"]
[connection signal="pressed" from="Control/Pause" to="." method="_on_Pause_pressed"]
[connection signal="pressed" from="Control/ProfileMenu/close" to="." method="_on_close_pressed"]

[editable path="Control/ProfileMenu"]
